# CRMArena

./: README.md  pyproject.toml  requirements.txt  run_tasks.py  run_tasks_crmarena.sh  run_tasks_crmarena_pro.sh
crm_sandbox/agents/: chat_agent.py  tool_call_agent.py  utils.py
crm_sandbox/env/: env.py  functions.py  users.py
