[project]
name = "crm_sandbox"
version = "0.1.0"
description = "CRMArena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "attrs==24.2.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "cryptography==43.0.0",
    "datasets>=4.2.0",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx>=0.27.0",
    "idna==3.7",
    "isodate==0.6.1",
    "jiter==0.5.0",
    "lxml==5.2.2",
    "more-itertools==10.4.0",
    "numpy==2.0.1",
    "openai>=1.68.2",
    "google-genai>=0.2.0",
    "pandas==2.2.2",
    "platformdirs==4.2.2",
    "pycparser==2.22",
    "pydantic>=2.8.2",
    "pydantic-core>=2.20.1",
    "pyjwt==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "requests==2.32.3",
    "requests-file==2.1.0",
    "requests-toolbelt==1.0.0",
    "rouge==1.0.1",
    "sacrebleu==2.4.3",
    "simple-salesforce==1.12.6",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tenacity==9.0.0",
    "together==1.3.1",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "zeep==4.2.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "crm_sandbox"
module-root = ""
